// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Toast Toast 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
    >
      Save Changes
    </button>
    <div
      class="Box-sc-1qu1edy-0 Toast__AnimatedBoxBottom-sc-1gp7eev-1 kVXqtj"
    >
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 eBpEPp Alert-u8lbe-0 Toast__AnimatedAlert-sc-1gp7eev-0 bHKHgD"
        role="alert"
      >
        <div
          class="Box-sc-1qu1edy-0 iDnpba"
        >
          Saved
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toast customize length of time toast is visible 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
    >
      Save Changes
    </button>
    <div
      class="Box-sc-1qu1edy-0 Toast__AnimatedBoxBottom-sc-1gp7eev-1 kVXqtj"
    >
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 bxjnP Alert-u8lbe-0 Toast__AnimatedAlert-sc-1gp7eev-0 fbHKHW"
        role="alert"
      >
        <div
          class="Box-sc-1qu1edy-0 iDnpba"
        >
          Saved
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toast multiple closeable toasts example 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 geyRYt"
    >
      <button
        class="Button__WrapperButton-sc-1omxup2-0 bclWrW PrimaryButton-qz78sb-0 cGyyDq"
      >
        Save Changes
      </button>
      <button
        class="Button__WrapperButton-sc-1omxup2-0 bclWrW"
      >
        Reset
      </button>
      <button
        class="Button__WrapperButton-sc-1omxup2-0 bclWrW DangerButton-sc-1220u5k-0 ehzMsl"
      >
        Trigger Error
      </button>
      <button
        aria-label="Delete"
        class="IconicButton__WrapperButton-sc-1u3dojp-1 UMPof IconicButton-sc-1u3dojp-2 gZASNp"
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 cwKdbD"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="32px"
          icon="delete"
          p="half"
          viewBox="0 0 24 24"
          width="32px"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
        <p
          class="Text-sc-1wu7vpu-0 hHlnON"
          color="currentColor"
          font-size="16px"
        >
          Delete
        </p>
      </button>
    </div>
    <div
      class="Box-sc-1qu1edy-0 Toast__AnimatedBoxBottom-sc-1gp7eev-1 kVXqtj"
    >
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 kLLvso Alert-u8lbe-0 Toast__AnimatedAlert-sc-1gp7eev-0 fbHKHW"
        role="alert"
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 ewGQci"
          color="#cc1439"
          fill="#cc1439"
          focusable="false"
          height="24px"
          icon="error"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="Box-sc-1qu1edy-0 iDnpba"
        >
          Error saving all your changes
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
        >
          <button
            aria-label="Close"
            class="Link-sc-1lpx3d0-0 eyTmUh"
            color="darkGrey"
            font-size="medium"
          >
            <svg
              aria-hidden="true"
              class="Icon-fc7twp-0 gNwFhh"
              color="currentColor"
              fill="currentColor"
              focusable="false"
              height="16"
              icon="close"
              size="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="Box-sc-1qu1edy-0 Toast__AnimatedBoxBottom-sc-1gp7eev-1 kVXqtj"
    >
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 kLLvso Alert-u8lbe-0 Toast__AnimatedAlert-sc-1gp7eev-0 fbHKHW"
        role="alert"
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 ewGQci"
          color="#cc1439"
          fill="#cc1439"
          focusable="false"
          height="24px"
          icon="error"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="Box-sc-1qu1edy-0 iDnpba"
        >
          Error: changes were reset
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
        >
          <button
            aria-label="Close"
            class="Link-sc-1lpx3d0-0 eyTmUh"
            color="darkGrey"
            font-size="medium"
          >
            <svg
              aria-hidden="true"
              class="Icon-fc7twp-0 gNwFhh"
              color="currentColor"
              fill="currentColor"
              focusable="false"
              height="16"
              icon="close"
              size="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="Box-sc-1qu1edy-0 Toast__AnimatedBoxBottom-sc-1gp7eev-1 kVXqtj"
    >
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 kLLvso Alert-u8lbe-0 Toast__AnimatedAlert-sc-1gp7eev-0 fbHKHW"
        role="alert"
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 ewGQci"
          color="#cc1439"
          fill="#cc1439"
          focusable="false"
          height="24px"
          icon="error"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="Box-sc-1qu1edy-0 iDnpba"
        >
          An error occurred, could not deleted
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
        >
          <button
            aria-label="Close"
            class="Link-sc-1lpx3d0-0 eyTmUh"
            color="darkGrey"
            font-size="medium"
          >
            <svg
              aria-hidden="true"
              class="Icon-fc7twp-0 gNwFhh"
              color="currentColor"
              fill="currentColor"
              focusable="false"
              height="16"
              icon="close"
              size="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="Box-sc-1qu1edy-0 Toast__AnimatedBoxBottom-sc-1gp7eev-1 kVXqtj"
    >
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 kLLvso Alert-u8lbe-0 Toast__AnimatedAlert-sc-1gp7eev-0 fbHKHW"
        role="alert"
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 ewGQci"
          color="#cc1439"
          fill="#cc1439"
          focusable="false"
          height="24px"
          icon="error"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="Box-sc-1qu1edy-0 iDnpba"
        >
          An error occurred, please retry
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
        >
          <button
            aria-label="Close"
            class="Link-sc-1lpx3d0-0 eyTmUh"
            color="darkGrey"
            font-size="medium"
          >
            <svg
              aria-hidden="true"
              class="Icon-fc7twp-0 gNwFhh"
              color="currentColor"
              fill="currentColor"
              focusable="false"
              height="16"
              icon="close"
              size="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toast multiple toasts example 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <div
      class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 geyRYt"
    >
      <button
        class="Button__WrapperButton-sc-1omxup2-0 bclWrW PrimaryButton-qz78sb-0 cGyyDq"
      >
        Save Changes
      </button>
      <button
        class="Button__WrapperButton-sc-1omxup2-0 bclWrW"
      >
        Reset
      </button>
      <button
        class="Button__WrapperButton-sc-1omxup2-0 bclWrW DangerButton-sc-1220u5k-0 ehzMsl"
      >
        Trigger Error
      </button>
      <button
        aria-label="Delete"
        class="IconicButton__WrapperButton-sc-1u3dojp-1 UMPof IconicButton-sc-1u3dojp-2 gZASNp"
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 cwKdbD"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="32px"
          icon="delete"
          p="half"
          viewBox="0 0 24 24"
          width="32px"
        >
          <path
            d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zM19 4h-3.5l-1-1h-5l-1 1H5v2h14V4z"
          />
        </svg>
        <p
          class="Text-sc-1wu7vpu-0 hHlnON"
          color="currentColor"
          font-size="medium"
        >
          Delete
        </p>
      </button>
    </div>
    <div
      class="Box-sc-1qu1edy-0 Toast__AnimatedBoxBottom-sc-1gp7eev-1 kVXqtj"
    >
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 jumLLM Alert-u8lbe-0 Toast__AnimatedAlert-sc-1gp7eev-0 bHKHgD"
        role="alert"
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 dqoulF"
          color="green"
          fill="#008059"
          focusable="false"
          height="24px"
          icon="check"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
          />
        </svg>
        <div
          class="Box-sc-1qu1edy-0 iDnpba"
        >
          Saved all your changes
        </div>
      </div>
    </div>
    <div
      class="Box-sc-1qu1edy-0 Toast__AnimatedBoxBottom-sc-1gp7eev-1 kVXqtj"
    >
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 jumLLM Alert-u8lbe-0 Toast__AnimatedAlert-sc-1gp7eev-0 bHKHgD"
        role="alert"
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 dqoulF"
          color="green"
          fill="#008059"
          focusable="false"
          height="24px"
          icon="check"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
          />
        </svg>
        <div
          class="Box-sc-1qu1edy-0 iDnpba"
        >
          Reset all your changes
        </div>
      </div>
    </div>
    <div
      class="Box-sc-1qu1edy-0 Toast__AnimatedBoxBottom-sc-1gp7eev-1 kVXqtj"
    >
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 jumLLM Alert-u8lbe-0 Toast__AnimatedAlert-sc-1gp7eev-0 bHKHgD"
        role="alert"
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 dqoulF"
          color="green"
          fill="#008059"
          focusable="false"
          height="24px"
          icon="check"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M9 16.17L4.83 12l-1.42 1.41L9 19 21 7l-1.41-1.41z"
          />
        </svg>
        <div
          class="Box-sc-1qu1edy-0 iDnpba"
        >
          Ok, it's deleted
        </div>
      </div>
    </div>
    <div
      class="Box-sc-1qu1edy-0 Toast__AnimatedBoxBottom-sc-1gp7eev-1 kVXqtj"
    >
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 gjRpuy Alert-u8lbe-0 Toast__AnimatedAlert-sc-1gp7eev-0 bHKHgD"
        role="alert"
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 ewGQci"
          color="red"
          fill="#cc1439"
          focusable="false"
          height="24px"
          icon="error"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="Box-sc-1qu1edy-0 iDnpba"
        >
          An error occurred, please retry
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Toast with close button 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 cQWJEM"
  >
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
    >
      Save Changes
    </button>
    <div
      class="Box-sc-1qu1edy-0 Toast__AnimatedBoxBottom-sc-1gp7eev-1 kVXqtj"
    >
      <div
        class="Box-sc-1qu1edy-0 Flex-hrfu3s-0 bxjnP Alert-u8lbe-0 Toast__AnimatedAlert-sc-1gp7eev-0 fbHKHW"
        role="alert"
      >
        <div
          class="Box-sc-1qu1edy-0 iDnpba"
        >
          Saved
        </div>
        <div
          class="Box-sc-1qu1edy-0 jlPsmj"
        >
          <button
            aria-label="Close"
            class="Link-sc-1lpx3d0-0 eyTmUh"
            color="darkGrey"
            font-size="medium"
          >
            <svg
              aria-hidden="true"
              class="Icon-fc7twp-0 gNwFhh"
              color="currentColor"
              fill="currentColor"
              focusable="false"
              height="16"
              icon="close"
              size="16"
              viewBox="0 0 24 24"
              width="16"
            >
              <path
                d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
